--- a/diplomarbeit/sections/ch2_technische_grundlagen/main.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/main.tex
@@ -2,7 +2,7 @@
 \label{sec:techngrund}
 
 \subsection{CAN-Bus}
-\comment{MELD:Kapitelnamen sind meh} \todo
+\todo{Kapitelnamen}
 \input{sections/ch2_technische_grundlagen/can-bus/obd2.tex}
 \input{sections/ch2_technische_grundlagen/can-bus/thermodynamik.tex}
 \input{sections/ch2_technische_grundlagen/can-bus/schadstoffausstoss.tex}
