--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -1,5 +1,5 @@
-% Examples:     MELD.TECHNISCHEGRUNDLAGEN-WEBAPP.DjangoReleases
-%               SIMR.IMPLEMENTIERUNG-SCHALTVORSCHLAG.WirkungsgradGrafik
+% Examples:     MELD.CH2-WEBAPP.DjangoReleases
+%               SIMR.CH3-SCHALTVORSCHLAG.WirkungsgradGrafik
 % 
 % Zu beachten: Kammelcase bei Description, Chapter-Section sind ausgeschrieben
 %
@@ -10,6 +10,17 @@
 	howpublished = "\url{http://www.omg.org/gettingstarted/gettingstartedindex.htm}",
 	note = {Accessed on 05.10.2014}
 }
+
+
+@misc{MELD.CH2-relationaleDB.rdbmsBuch, 
+    author = {Leavitt N.},
+    year = {2010},
+    title = {Will NoSQL Databases Live Up to Their Promise?},
+    howpublished = "Computer 43",
+    note = {Accessed on 22.03.2016}
+}
+
+
 
 @conference{Carnot.Wirkungsgrad,
     author = {Prof. Dr. Karl-Heiz Kampert},
