--- a/diplomarbeit/abstract.tex
+++ b/diplomarbeit/abstract.tex
@@ -1,14 +1,14 @@
-\section*{Kurzfassung}
+\section*{Kurzfassung} \todo{Kontrolle}
 
-Die Zielsetzung des Projekt BestShift, entwickelt von Schülern der Abteilung für Informationstechnologie am TGM, ist die Sammlung, Analyse und Verwendung von Daten die relevant für KFZ-Fahrer sind. Durch die zwei Datenquellen, das Auto selber, mit welchem durch den Diagnostikport kommuniziert wird, und der selbst entwickelte Car-PC, werden passende Darstellungen geboten die zeigen wie gut ein Fahrer fährt.
+Die Zielsetzung des Projekt BestShift, entwickelt von Schülern der Abteilung für Informationstechnologie am TGM, ist die Sammlung, Analyse und Verwendung von Daten die relevant für KFZ-Fahrer sind. Durch die zwei Datenquellen, das Auto selber, mit welchem durch den Diagno- stikport kommuniziert wird, und der selbst entwickelte Car-PC, werden passende Darstellungen geboten die zeigen wie gut ein Fahrer fährt. 
+Durch die modulare Umsetzung des Car-PCs kann zu jedem Zeitpunkt ein neuer Sensor hinzugefügt werden. Zusätzlich dazu dient der Car-PC als ein Medium der Zwischenspeicherung und Erst- Verarbeitung der relevanten Information für die späteren Anwendungen durch die Applikationen. 
 
-Durch die modulare Umsetzung des Car-PCs kann zu jedem Zeitpunkt ein neuer Sensor hinzugefügt werden. Zusätzlich dazu dient der Car-PC als ein Medium der Zwischenspeicherung und Erst-Verarbeitung der relevanten Information für die späteren Anwendungen durch die Applikationen.
+Präzise, einfach zu verstehende Darstellung und Features die den Fahrstil verbessern können, sind mittels zwei Applikation entwickelt worden, wobei diese für unterschiedliche Szenarien konzipiert sind. Die erste Applikation ist entwickelt worden für Smartphone - für die Android Plattform. Die Android Applikation sammelt die benötigten Daten direkt vom Car-PC und kann somit beinahe Echtzeit-Darstellung erzeugen. Die Android-App ist außerdem für das hochladen der Sensordaten auf den BestShift Server zuständig. Von unserem Server aus kann dann die zweite Applikation, die Web-Applikation, die benötigten Ressourcen laden und weiter verarbeiten. Es ist zu erwähnen, dass die Web-App als die primäre Speicherungsstelle dient – alle Fahrten des Fahrers werden hier gespeichert und dieser kann sich alle retrospektiv ansehen. Zusätzlich dazu kann man mit der inkludierten Social Media Anbindung über seinen Fahrstil prahlen. 
 
-Präzise, einfach zu verstehende Darstellung und Features die den Fahrstil verbessern können, sind mittels zwei Applikation entwickelt worden, wobei diese für unterschiedliche Szenarien konzipiert sind. Die erste Applikation ist entwickelt worden für Smartphone - spezifisch für die Android Plattform. Die Android Applikation sammelt die benötigten Daten direkt vom Car-PC und kann somit beinahe Echtzeit-Darstellung erzeugen. Die Android-App ist außerdem für das hochladen der Sensordaten auf den BestShift Server zuständig.
+Durch die Kombinationen der Hauptfeatures, Schaltvorschlag, Fahrgastkomfortanalyse, und Verbrauchsanalyse, kann man, durch numerisch wiederlegte Werte, angeben wie gut der Fahrstil eines Fahrers ist.
 
-\todo
+\section*{Abstract} \todo{Kontrolle}
 
-\section*{Abstract}
 The Project BestShift, developed by students from the department of information technology at the TGM, has the main goals of extracting, analysing and processing data relevant for drivers of automoviles. Through the two main data sources, the car itself (interfaced through the diagnostics port) as well as the self-developed Car-PC, an accurate representation of how well a driver is driving can be given.
 
 A modular approach has been chosen for the Car-PC – which means that at any given moment a new sensor can be added and a wider spectrum of representable data is given. The Car-PC additionally serves as a secondary data hub, as the information, provided through the OBD-II, is also stored on it. It is actually not necessary to use all the data provided by the car, hence the Car-PC also filters out the relevant data for the visualisations in our applications.
