--- a/diplomarbeit/special/preamble.tex
+++ b/diplomarbeit/special/preamble.tex
@@ -49,10 +49,10 @@
 
 \iftoggle{devel} {
 	\newcommand{\comment}[1]{{\bf \colorbox{yellow}{\color{black}#1}}}
-	\newcommand{\todo}{{\bf \colorbox{red}{\color{white}TODO:}}}	
+	\newcommand{\todo}[1]{{\bf \colorbox{red}{\color{white}TODO: #1}}}	
 } {
 	\newcommand{\comment}[1]{{}}
-	\newcommand{\todo}{{}}
+	\newcommand{\todo}[1]{{}}
 }
 
 \newcommand{\ifreport}[1]{#1}
