--- a/diplomarbeit/sections/ch3_implementierung/fahrkomfortanalyse.tex
+++ b/diplomarbeit/sections/ch3_implementierung/fahrkomfortanalyse.tex
@@ -1,37 +1,24 @@
 \lfoot{Autor: Fitim Faiku}
 \subsection{Fahrkomfortanalyse}
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+Dass die Bewertung der einzelnen Fahrer durch den Fahrgast erfolgt ist jedem klar.
+Diese Bewertung wird meist durch gewisse Faktoren bestimmt. Diese können wie stark ein Fahrer beschleunigt und welche Kurvengeschwindigkeit ein Fahrer anwendet.
+Um einen KFZ-Einsteiger mit möglichst informativen Daten zu \"bewerten\" habe ich mir einen Kamm'schen Kreis zur Hilfe genommen.
 
-Da die bewertung der einzelnen Fahrer durch den Fahrgast erfogt ist jedem klar.
-Diese Bewertung fÃ€llt meistens aus den Faktoren wie stark ein Fahrer beschleunigt und in welcher Geschwindigkeit er um eine Kurve fÃ€hrt.
-Um einen KFZ-Einsteiger mit mÃ¶glichst Informativen Daten zu \"bewerten\" habe ich mir einen Kammschen Kreis als Hilfe genommen.
-
-\subsubsection{Kammscher Kreis }
-Ein Kammsher Kreis ist ein ein Kreis in dem durch Polarkoordinaten die Extremwerte einer Fahrt eingezeichnet sind.
-Der Kreis ist so aufebaut, dass in der positiven y-Achse alle BremskrÃ€fte eingezeichnet werden, negative y-Achse fÃŒrs beschleunigen,
-negative x-Achse alle rechts Kurven, positiven x-Achse alle Linkskurven.
-Es ist also ales verkehrt.
+\subsubsection{Kammscher Kreis}
+Ein Kamm'scher Kreis ist ein ein Kreis in dem durch Polarkoordinaten die Extremwerte einer Fahrt eingezeichnet sind.
+Der Kreis ist so aufgebaut, dass in der positiven vertikalen Achse alle Bremskräfte, in der negativen vertikalen Achse alle Beschleunigungskräfte,
+in der negative horizontalen Achse alle rechts Kurven, in der positiven horizontalen Achse alle Linkskurven eingezeichnet werden. \comment{SIMR: vllt. mit Himmelsrichtungen statt positiv und negativ + welche Achse}
+Es sind die eingezeichneten Werte also spiegelverkehrt zur Intuition.
 
 \subsubsection{Implementierung}
-Um diesen Kammschen Kreis richtig darzustellen habe ich mir die Klasse canvas als Hilfe genommen, wobei die von Graphics erbt.
-Mittels Canvas konnte ich zufÃ€llig generierte 0-360grad Winkel und Radien erstellen und die dann in Polarkoordinaten umrechnen.
-Somit konnte ich alle generierten werte Darstellen. 
+Um diesen Kamm'schen Kreis richtig darzustellen habe ich mir die Klasse \textit{Canvas} als Hilfe genommen, wobei diese von \textit{Graphics} erbt.
+Mittels Canvas konnte ich zufällig generierte 0-360grad Winkel und Radien erstellen und die dann in Polarkoordinaten umrechnen.
+Somit konnte ich alle generierten Werte darstellen. 
 
-public int runden(float roh){
-	float anzahl= round(roh/5);
-	System.out.println("Gerundet:" + anzahl);
-	int returnzahl=0;
-	returnzahl= (int) (anzahl*5);
-	return returnzahl;
-}
+\lstinputlisting[caption=Runden-Methode, style=javastyle]{code/Runden.java}
 
-Bei der Methode Runden nehme ich alle Winkel auf und Runde sie auf oder ab in 5er Schritten.
+Bei der Methode Runden nehme ich alle Winkel auf und runde sie auf oder ab in 5er Schritten.
 
 
 
