Worked on my chapter

--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -20,7 +20,45 @@
     note = {Accessed on 22.03.2016}
 }
 
+@misc{MELD.CH2-noSQL.firstSQLNaming, 
+    author = {Carlo Strozzi},
+    year = {2007-2010},
+    title = {NoSQL – A relational database management system},
+    howpublished = "\url{http://www.strozzi.it/cgi-bin/CSA/tw7/I/en_US/nosql/Home%20Page}",
+    note = {Accessed on 25.03.2016}
+}
 
+@misc{MELD.CH2-noSQL.whatsInAName, 
+    author = {Eric Evans},
+    year = {2009},
+    title = {NoSQL: What’s in a name?},
+    howpublished = "\url{http://www.deadcafe.org/2009/10/30/nosql_whats_in_a_name.html}",
+    note = {Accessed on 23.03.2016}
+}
+
+@misc{MELD.CH2-noSQL.whyItsBetter, 
+    author = {Eric Lai},
+    year = {2009},
+    title = {No to SQL? Anti-database movement gains steam},
+    howpublished = "\url{http://www.computerworld.com/article/2526317/database-administration/no-to-sql--anti-database-movement-gains-steam.html}",
+    note = {Accessed on 23.03.2016}
+}
+
+@misc{MELD.CH2-noSQL.natiShalomlol, 
+    author = {Nati Shalom},
+    year = {2009},
+    title = {No to SQL? Anti-database movement gains steam – My Take},
+    howpublished = "\url{http://natishalom.typepad.com/nati_shaloms_blog/2009/07/no-to-sql-anti-database-movement-gains-steam-my-take.html}",
+    note = {Accessed on 23.03.2016}
+}
+
+@misc{MELD.CH2-noSQL.capTheorem, 
+    author = {Erik Brewer},
+    year = {2000},
+    title = {Towards Robust Distributed Systems - Keynote},
+    howpublished = "\url{http://www.cs.berkeley.edu/~brewer/cs262b-2004/PODC-keynote.pdf}",
+    note = {Accessed on 23.03.2016}
+}
 
 @conference{Carnot.Wirkungsgrad,
     author = {Prof. Dr. Karl-Heiz Kampert},
